--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
   ],
   "scripts": {
     "build": "tsc",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "test": "vitest run"
   },
   "keywords": [
     "opencode",
@@ -46,7 +47,8 @@
     "@opencode-ai/plugin": "^1.0.150",
     "@types/node": "^24.6.2",
     "jsonc-parser": "^3.3.1",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "vitest": "^3.2.4"
   },
   "dependencies": {
     "jsonc-parser": "^3.3.1"
