--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "bin": {
-    "opencode-glm-clipboard": "./scripts/install-opencode-glm-clipboard.js"
+    "opencode-glm-clipboard": "scripts/install-opencode-glm-clipboard.js"
   },
   "files": [
     "dist/",
